Remove all Lovable branding and replace footer with 'All Rights Reserved'

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Jess's Mobile Bar - Premium Cocktail Service" />
     <meta property="og:description" content="Elevated cocktail experience with mystical elegance for your special events across Southern California." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/jess-mobile-bar/lovable-uploads/9e9f8ba8-ec6a-489f-a2ab-b061834f47bc.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@jessmobilebar" />
+    <meta name="twitter:image" content="/jess-mobile-bar/lovable-uploads/9e9f8ba8-ec6a-489f-a2ab-b061834f47bc.png" />
     
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
