Prepare project for GitHub Pages deployment - Add GitHub Actions workflow, update configuration, and improve documentation

--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="description" content="Jess's Mobile Bar - Premium mobile bartending services across Los Angeles, Orange County & Inland Empire. Get your free quote today!" />
+    <meta name="keywords" content="mobile bar, bartending, events, Los Angeles, Orange County, Inland Empire, cocktail service" />
+    <meta name="author" content="Jess's Mobile Bar" />
+    <title>Jess's Mobile Bar - Premium Mobile Bartending Services</title>
+    <link rel="icon" type="image/png" href="/assets/Jess_1753667449194.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
